--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -39,6 +39,7 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    needs: test
     strategy:
       fail-fast: false
       matrix:
@@ -56,7 +57,7 @@ jobs:
         python -m pip install flake8 pytest
         python -m pip install pyinstaller
         cd src/test
-        pyinstaller "test_buscaHorario.py"
+        python -m pyinstaller "test_buscaHorario.py"
 
     - name: Upload artefatos
       uses: actions/upload-artifact@v3
