--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -54,10 +54,10 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install flake8 pytest
+        python -m pip install flake8
         python -m pip install pyinstaller
         cd src/test
-        python -m pyinstaller "test_buscaHorario.py"
+        python -m PyInstaller "test_buscaHorario.py"
 
     - name: Upload artefatos
       uses: actions/upload-artifact@v3
