--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -71,3 +71,12 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+  
+  notification:
+      needs: build
+
+      runs-on: ubuntu-latest
+      steps:
+        - name: Executa scripts externos (à fim de enviar e-mail de congratulação)
+          uses: actions/checkout@v4
+        - run: sh scripts/shell.sh
